# smartbody

./: 3rd party licenses.txt  CMakeLists.txt  INSTALL.txt  SmartBodyPythonAPI.html  compile-sbm.bat  linuxlibsbuild.sh  linuxlibsdownload.sh  osxdependencies.sh  osxlibsdownload.sh  smartbody.html  smartbody.iss  vs2008.sln  vs2010.sln  vs2015.sln
cmake/tutorialA/lib/: CMakeLists.txt
core/FestivalRelay/: CMakeLists.txt  FestivalRelay.vcproj  FestivalRelay.vcxproj  speechrelay.sh
core/FestivalRelay/src/: FestivalRelay.cpp
core/smartbody/: CMakeLists.txt
core/smartbody/Maya mel scripts/: SK_Character_Creation.doc  export_sk.mel  skExporter.bat  skmExporterSingle.bat
core/smartbody/SmartBody/: CMakeLists.txt  SmartBody.vcproj  SmartBody.vcxproj  SmartBody.vcxproj.filters
core/smartbody/SmartBodyJS/: Shader.h  SmartBodyJS.vcxproj  esUtil.cpp  esUtil.h  main.cpp  minimalwrapper.cpp
core/smartbody/fltk/: readme.txt
core/smartbody/fltk-1.3.2/: Makefile  README  README.Cairo.txt
core/smartbody/ogre-viewer/: Brad_Shirt.dds  Brad_Tpose.material  OgreTest.cpp  OgreTest.sln  OgreTest.vcproj
core/smartbody/sbgui/: CMakeLists.txt
core/smartbody/sbm/: CMakeLists.txt  README.txt
core/smartbody/sbm-batch/: CMakeLists.txt  sbm-batch.cpp  sbm-batch.vcproj  sbm-batch.vcxproj
core/smartbody/simplesmartbody/: CMakeLists.txt  simplesmartbody.cpp  simplesmartbody.vcproj  simplesmartbody.vcxproj
core/smartbody/smartbody-dll/: CMakeLists.txt  smartbody-c-dll.cpp  smartbody-dll.cpp  smartbody-dll.sln  smartbody-dll.vcproj  smartbody-dll.vcxproj
core/smartbody/smartbody-lib/: README.txt
core/smartbody/smartbodyOpenVR/: CGLRenderModel.cpp  CGLRenderModel.h  CMainApplication.cpp  SBOpenVRListener.cpp  SmartBodyOpenVR.cpp  smartbodyOpenVR.vcxproj
trunk/: 3rd party licenses.txt  CMakeLists.txt  INSTALL.txt  SmartBodyPythonAPI.html  compile-sbm.bat  linuxlibsbuild.sh  linuxlibsdownload.sh  osxlibsbuild.sh  smartbody.html  smartbody.iss  vs2008.sln  vs2010.sln  vs2015.sln
trunk/android/: Android_INSTALL.txt
trunk/android/boost/: user-config.jam
trunk/android/lib/: libactivemq-cpp.la  libapr.la  libaprutil-1.la  libexpat.la
trunk/android/sbjniapp/: AndroidManifest.xml  INSTALL.txt  build.gradle
trunk/android/sbm/: .classpath  .project
trunk/android/sbm-ogre/: AndroidManifest.xml  default.properties  initOgre.seq
trunk/android/sbmjni/: AndroidManifest.xml
trunk/android/sbmobile/: AndroidManifest.xml  INSTALL.txt  build.gradle
trunk/android/sbogreapp/: AndroidManifest.xml
trunk/android/sbsimpleapp/: build.gradle
trunk/android/vhcl/: vhcl_audio.cpp  vhcl_log.cpp  vhcl_log.h  vhcl_string.h
trunk/android/vhmsg/: vhmsg-tt.cpp  vhmsg.h
trunk/core/: CMakeLists.txt  svn-externals.txt
trunk/core/FestivalRelay/: CMakeLists.txt  FestivalRelay.sln  FestivalRelay.vcproj  FestivalRelay.vcxproj  speechrelay.bat  speechrelay.sh
trunk/core/MsSpeechRelay/: AssemblyInfo.cs  MsSpeechRelay.csproj  Program.cs
trunk/core/PandaBMLR/: Demo.py  DemoBasic.py  DemoBasicEmbedded.py  PandaBMLR.config  RUN_DemoBasic.bat  RUN_DemoBasicEmbedded.bat
trunk/core/cepstralrelay/: README-AdditionalNotes.txt  README.txt  cepstralrelay.vcproj
trunk/core/cerevoicerelay/: README-AdditionalNotes.txt  README.txt  cerevoicerelay.vcproj  cerevoicerelay.vcxproj
trunk/core/irrlichtsmartbody/: irrlichtsmartbody.vcxproj
trunk/core/multirealizer/: multirealizer.vcproj  multirealizer.vcxproj
trunk/core/ogre-viewer/: Brad_Face_2048.dds  CMakeLists.txt  OgreTest.vcproj  resources.cfg
trunk/core/ogresmartbody/: ogresmartbody.vcxproj
trunk/core/smartbody/: CMakeLists.txt  smartbody-core.sln
trunk/data/behaviorsets/: BehaviorSetCommon.py  BehaviorSetFemaleLocomotion.py  BehaviorSetGestures.py  BehaviorSetJumping.py  BehaviorSetKicking.py  BehaviorSetMaleGestures.py  BehaviorSetMaleLocomotion.py  BehaviorSetMaleMocapLocomotion.py  BehaviorSetMocapReaching.py  BehaviorSetPNGestures.py  BehaviorSetPunching.py  BehaviorSetReaching.py  default-behavior-sets.py
trunk/data/examples/: AddCharacterDemo.py  AddCharacterDemoFaceShift.py  AddCharacterDemoRachel.py  AddCharacterPhysicsDemo.py  AddMultipleCharacterDemo.py  BlendDemo.py  ConstraintDemo.py  CrowdDemo.py  EventDemo.py  FacialMovementDemo.py  FuseTest.py  GazeDemo.py  GesturesDemo.py  HeadDemo.py  KinectDemo.py  KinectSimpleDemo.py  LocomotionDemo.py  LocomotionTypeDemo.py  OfflineRetargettingDemo.py  OgreCrowdDemo.py  OgreDemo.py  OnLineRetargettingDemo.py  PerlinNoiseDemo.py  PhysicsDemo.py  PhysicsForceDemo.py  PhysicsPawnDemo.py  PhysicsRagdollDemo.py  PostProcessingDemo.py  ReachDemo.py  RetargettingDemo.py  SaccadeDemo.py  SpeechDemo.py  SteeringDemo.py  TerrainWalkDemo.py  VisemesDemo.py
trunk/data/sbm-common/: README.txt
trunk/data/sbm-testdata/: README.txt  default-init.seq  default-viewer.seq  demo-aamas2008-init.seq  demo-aamas2008-reset-unreal.seq  demo-aamas2008.seq  test-audiofile-speech.seq  test-interrupt-speech.seq
trunk/data/scripts/: default-viewer.py  mixamo-map2.py  perceptionneuron-map.py  zebra2-map.py
trunk/data/shaders/: blur.frag  gbuffer.frag  gbuffer.vert  ibl.frag  lighting.frag  skinning.vert  ssao.frag
trunk/flash/: mms.cfg
trunk/flash/actionscripts/: Console.as  Makefile  Preloader.as
trunk/flash/data/: AnimationList.txt
trunk/flash/demo/: Console.abc  SmartBodyFlashDemo.html
trunk/flash/minimalflashapp/: exports.txt  simplesmartbody.cpp
trunk/ios/: Readme.txt  build.sh  createIOSBuild.sh
trunk/ios/clapack/: setup-iphonesimulator.sh  toolchain-iphoneos.cmake
trunk/ios/freealut/: CMakeLists.txt
trunk/ios/ode/: setup-iphoneos.sh  setup-iphonesimulator.sh
trunk/ios/protobuf/: setup-iphoneos.sh
trunk/ios/python/: setup-iphoneos.sh
trunk/ios/sbmobile/: AppListener.cpp  AppListener.h  (+6 more)
trunk/lib/: CMakeLists.txt  svn-externals.txt
trunk/nacl/: README.txt
trunk/scripts/: run_aamas2008_demo.bat
trunk/sdk/: .smartbodysettings
trunk/test_suite/: Readme.txt  Title.sh  common_comp.sh  common_test.sh  sbmTestSuite.sh  send_email.sh  smartbodytestsuite.sh  test.config  testconfig.sh
(+6701 files in other folders)
